# time-2025

./: #statix_output.txt#  #statix_output_part_aa#  #update.sh#  .#statix_output.txt  .gitignore  .gitmodules  .pre-commit-config.yaml  .step1.drv  .vale.ini  GEMINI.md  Makefile  Makefile.sops-noob  README.md  all-audit-chunks.json  bott_principles.nix  bug_repro.nix  capture_telemetry.sh  check-slow.sh  checker.nix  comment_creds_source_dir_usages.sh  commit-message.txt  commit-msg-check.nix  commit_message.txt  content.nix  create_nar_from_json.sh  crq-parser.nix  custom_commit_msg_hook.sh  debug-outputs.Makefile  debug-system-outputs.Makefile  debug.Makefile  debug_build.sh  default.nix  doit.sh  doit2.sh  eval-mini-prelude.nix  eval-output.nix  eval-tasks.nix  example-2025.nix  example_url_fetch.nix  fix-nix-urls.sh  (+61 more)
09/24/rust_knowledge_extractor/: Cargo.toml
09/24/rust_knowledge_extractor/src/: main.rs
09/25/log_analyzer/: Cargo.toml  Makefile  README.md  bott8_architectural_dark_matter.md  bott8_architectural_dial_tone.md  bott8_architectural_event_horizon.md  bott8_architectural_hologram.md  bott8_architectural_predator_prey.md  bott8_architectural_resonance_chambers.md  bott8_architectural_symbiosis.md  bott8_astrology_meme_system_spec.md  bott8_c4_diagram.puml  bott8_dog_meme_adaptation.md  bott8_emoji_grammar_rust_spec.md  bott8_final_thoughts.md  bott8_foundational_systems_meme_spec.md  bott8_gemini_self_analysis.md  bott8_glossary.md  bott8_idea_telephone_booths.md  bott8_incompleteness_danger_assertion.md  bott8_self_representation_emoji.md  bott8_smart_contracts_emoji_memes_spec.md  bott8_topological_collapse_methodology.md  braindump.md  cargo_files.txt  categorize_urls.py  dev1.sh  dev2.sh  flake.nix  getsources.sh  github_repo_urls.txt  log_entry_schema.json  nix_build_and_log.sh  notes.org  review2.sh  run_task_interactive.sh  snapshot.txt  snapshot_bott8_analysis.md  sources.txt  telemetry_streams.json  (+6 more)
09/25/log_analyzer/bott8_concepts/: bott8_ai_life_simulation_spec.md  bott8_alife_virtual_mycology.md  bott8_architectural_commensalism.md  bott8_architectural_dark_forest.md  bott8_architectural_echo_chamber.md  bott8_architectural_event_horizon.md  bott8_architectural_event_storm.md  bott8_architectural_gaia_hypothesis.md  bott8_architectural_genome_epigenetics.md  bott8_architectural_memetic_drift.md  bott8_architectural_niche.md  bott8_architectural_parasitism.md  bott8_architectural_quantum_foam.md  bott8_architectural_singularity.md  bott8_architectural_succession.md  bott8_architectural_tesseract.md  bott8_babbling_interlude.md  bott8_creative_interlude.md  bott8_decomposition_theory.md  bott8_dragons_egg_llvm_meme_spec.md  bott8_emoji_driven_rust_manifesto.md  bott8_emoji_parser_in_emoji_spec.md  bott8_empirical_8_layers_self_description.md  bott8_epic_creation_myth.md  bott8_experiment_hypothesis.md  bott8_first_dog_meme.md  bott8_harmonic_resonance_theory.md  bott8_idea_telephone_booths.md  bott8_index.md  bott8_index_mapping.md  bott8_inode_as_meme_meta_meme_spec.md  (+17 more)
10/14/: Cargo.toml  call-llm.py  dwarf_analyzer.py  flake.nix  grandvision.md  monster-group-prime-lattice.nix  monster-lattice-result  mycology-eval.nix  mycology-flake-docs.md  mycology.md  ooda-flake-evaluation.md  reboot1.md  reboot2.md  workflow.md
10/14/audit-with-rust/: audit_single_lock_file.sh  flake.nix
10/14/flake_auditor/: Cargo.toml  flake.nix
10/14/lib/: fixme-task-generator.nix  flake-utils.nix  key-object.nix  llm-call-vector-functor.nix  llm-functor.nix  llm-pipeline.nix  llm-response-package-functor.nix  model-router.nix  outputs.nix  stop-words.nix  workpool-functor.nix
10/14/scripts/: llm-orchestrator.sh
10/14/test-scripts/: README.md  recursive_eval.nix  runreport.sh  temp_eval.nix  tmp_test_shell.nix
12/06/: .gitignore  Cargo.toml  Search _ DeepWiki.html  analysis_report.json  braindump.md  braindump.toml  goal1.md  log.txt  log_config_lib.txt  log_drawing_8_prev.txt  plan.md  schema_report.md  vision.md
12/06/Search _ DeepWiki_files/: 1127-b475c4cc62d0a830.js  1684-e9ef309b586ffd4b.js  1769-6bbc7ae2dcadfa9c.js  2249-342d7235b3a68051.js  2888-664fad7dec133c78.js  3224-7e9887ea92eab174.js  3639-22cfac537e991f4e.js  378e5a93-3b0f971d3611a8a5.js  4095ef47de7c7e40.css  4154-f7634cd651686b21.js  4348-824485747071bae4.js  4420-863691215dce8f1b.js  4870-3ddb59732948b175.js  5739-9f121201890f66e8.js  6417-34cc3208366c5e5f.js  655-b5574efc1f81bad2.js  6967-c4b815e71e97ed18.js  7bf36345-06f80506190927ed.js  8613-82346d348221c557.js  87600ca0112f3c8f.css  9970-31fea4ade6367f07.js  b1298b8d-549c141f97a3b262.js  c16f53c3-1a60b9b77b3e1d4b.js  f7f68e2d-40290491c524df5c.js  layout-29b9e51535b9e9b7.js  layout-37a15e31a18fac3d.js  main-app-8ab5af3d6b81086e.js  page-f8f9c3ee3ed017b9.js  webpack-acbbbb548492d4a6.js
12/06/braindumps/: guiding_principle.toml  schema_rollup.toml
12/06/bsp-buddy-finder/: Cargo.toml
12/06/build_tester/: Cargo.toml
12/06/config_lib/: Cargo.toml
12/06/connectivity-analyzer/: Cargo.toml
12/06/docs/: db_abstraction.md
12/06/hir_driver/: Cargo.toml  hir_output.txt
12/06/hir_generator/: Cargo.toml  hir_model.rs
12/06/hir_model_tester/: Cargo.toml
12/06/json_transformer/: Cargo.toml
12/06/lean_introspector/: Cargo.toml  SimpleExpr.rec_686e510a6699f2e1ff1b216c16d94cd379ebeca00c030a79a3134adff699e06c.json  analysis_report.json  analysis_report.json.txt  build.rs  config.toml
12/06/lean_introspector_lib/: Cargo.toml
12/06/libfaalg_adaptor/: Cargo.toml
12/06/monster-map-generator/: Cargo.toml
12/06/monster_svg_morphism/: Cargo.toml  README.md  enum_type_graph.dot
12/06/nalgebra_adaptor/: Cargo.toml  build.rs
12/06/ngram-analyzer/: Cargo.toml
12/06/output/: buddy_report.json  connectivity_report.json  drawing-8.json  extracted_data_prev.json  monster_map_report.json  semantic_dictionary_template.toml  similarity_report.json
12/06/similarity-analyzer/: Cargo.toml
12/06/svg-renamer/: Cargo.toml  README.md
12/06/svg_hir/: Cargo.toml
12/06/svg_parser_tool/: Cargo.toml
12/06/wikivector/: Cargo.toml
(+2682 files in other folders)
