[package]
name = "rust_knowledge_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
