[workspace]
[package]
name = "log_analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "log_analyzer"
path = "src/lib.rs"

[[bin]]
name = "log_analyzer"
path = "src/main.rs"

[dependencies]
regex = "1.10.0"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }

[[bin]]
name = "telemetry_manager"
path = "src/bin/telemetry_manager.rs"

