[package]
name = "hir_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.4"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
prettyplease = "0.1"
proc-macro2 = "1.0"
toml = "0.5" # Added TOML dependency
config_lib = { path = "../config_lib" }
