[package]
name = "lean_introspector"
version = "0.1.0"
edition = "2024"

[dependencies]
#linfa-linalg = { workspace = true }
#libfaalg_adaptor = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ndarray = { workspace = true }
num-complex = { workspace = true }
lazy_static = "1.4.0"

[lib]
name = "lean_introspector_lib"
path = "src/lib.rs"

[[bin]]
name = "lean_introspector"
path = "src/main.rs"

# [features]
# nalgebra-backend = ["nalgebra_adaptor", "nalgebra"]
# linfa-backend = ["linfa-linalg"]
