[package]
name = "lean_introspector"
version = "0.1.0"
edition = "2024"

[dependencies]
#linfa-linalg = { workspace = true }
#libfaalg_adaptor = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ndarray = { workspace = true, features = ["serde"] }
num-complex = { workspace = true, features = ["serde"] }
lazy_static = "1.4.0"
lean_introspector_lib = { path = "../lean_introspector_lib" } # Add this line

[[bin]]
name = "lean_introspector"
path = "src/main.rs"

# [features]
# nalgebra-backend = ["nalgebra_adaptor", "nalgebra"]
# linfa-backend = ["linfa-linalg"]
