[package]
name = "lean_introspector_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.16.1", features = ["serde"] } # Align with main crate's assumed version
num-complex = { version = "0.4", features = ["serde"] }
 # Update for potential compatibility
