[package]
name = "svg_hir"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = { workspace = true }
simba = "0.8.1"
matrixmultiply = "0.3.10"
regex = "1.10.2"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
num-prime = "0.4.0"
num-traits = "0.2"
petgraph = "0.8"
linfa-linalg = { workspace = true }
xmlwriter = "0.1.0"
roxmltree = "0.20.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
walkdir = "2.3"