[package]
name = "svg_parser_tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "svg_parser_tool"
path = "src/main.rs"

[[bin]]
name = "wordcloud_generator"
path = "src/bin/wordcloud_generator.rs"

[dependencies]
monster_svg_morphism = { path = "../monster_svg_morphism" }
xml-rs = "0.8" # For XML parsing
config_lib = { path = "../config_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
svg = { workspace = true } # For SVG generation
resvg = { workspace = true } # For SVG parsing
xmlwriter = { workspace = true } # For xml parsing
svg_hir = { workspace = true }
usvg = { workspace = true } # For USVG parsing (part of resvg)
rocksdb = { version = "0.24.0", features = ["serde", "lz4"] }
sha2 = "0.10.9"
ignore = "0.4.25"
