[package]
name = "streamofrandom_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/meta-introspector/streamofrandom"
homepage = "https://github.com/meta-introspector/streamofrandom"
documentation = "https://github.com/meta-introspector/streamofrandom"
description = "A CLI tool for streamofrandom project"
keywords = ["cli", "nix", "automation"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"


[lints]
# Add specific lints here if needed, or remove this section if not using workspace lints
